Removed border in dark mode. Fixed code design

--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -24,7 +24,6 @@
     background-color: var(--main-light);
   }
   section.text img, section.text pre, section.text video {
-    border: 0.25rem solid var(--additional-dark);
     background-color: var(--additional-dark);
   }
   a.show-more:hover {
